# bartpy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  a.out  agents.md  pyproject.toml  setup.py
.github/workflows/: copilot-setup-steps.yml  docs.yml  lint.yml  publish.yml  tests.yml  typos.yml
bartorch/: __init__.py
bartorch/core/: context.py  graph.py  tensor.py
bartorch/csrc/: CMakeLists.txt  bart_ops.cpp  bartorch_ext.cpp  tensor_bridge.hpp
bartorch/csrc/cuda/: cuda_bridge.hpp
bartorch/ops/: __init__.py  fft.py  italgos.py  linops.py  phantom.py  pics.py
bartorch/pipe/: __init__.py  cfl_tmp.py  fifo.py
bartorch/tools/: __init__.py  _commands.py  _dispatch.py  _generated.py  fft.py  italgos.py  phantom.py  pics.py
bartorch/utils/: __init__.py  cfl.py  flags.py
build_tools/: gen_tools.py
docs/: conf.py  developers_guide.rst  getting_started.rst  index.rst  requirements.txt
docs/api/: index.rst
docs/examples/: 01_high_level_tools.ipynb  02_library_internals.ipynb  phantom_demo.ipynb
examples/: 01_high_level_tools.ipynb  02_deepinv_example.ipynb  02_library_internals.ipynb  index.rst
src/bartorch/: __init__.py
src/bartorch/core/: __init__.py  context.py  graph.py  tensor.py
src/bartorch/csrc/: CMakeLists.txt  accelerate_fftw_shim.c  bartorch_ext.cpp  finufft_grid.cpp  lib_ops.cpp  lib_shim.c  mkl_fftw_shim.c  tensor_bridge.hpp  torch_prior.cpp  torch_prior_nlop.c  torch_prior_nlop.h
src/bartorch/csrc/cuda/: bartorch_cuda_dispatch.cpp  cufinufft_grid.cu
src/bartorch/csrc/fftw3_stub/: fftw3.h
src/bartorch/interop/: __init__.py  _deepinv.py
src/bartorch/lib/: __init__.py  encoding.py  linops.py  solvers.py
src/bartorch/ops/: __init__.py  linops.py
src/bartorch/tools/: __init__.py  _commands.py  _generated.py
src/bartorch/utils/: __init__.py  cfl.py  flags.py
tests/: test_bart_ops.py  test_cfl.py  test_context.py  test_cuda.py  test_ext.py  test_finufft_grid.py  test_flags.py  test_lib.py  test_linops.py  test_tensor.py  test_tools_pics.py
