[build-system]
requires = [
    "scikit-build-core>=0.9",
    "torch",        # provides libtorch + cmake config at build time
]
build-backend = "scikit_build_core.build"

[project]
name = "bartorch"
version = "0.1.0.dev0"
description = "PyTorch-native interface to the Berkeley Advanced Reconstruction Toolbox (BART)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "nbstripout",
    "codespell",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme",
    "nbsphinx",
    "sphinx-copybutton",
]

# ---------------------------------------------------------------------------
# scikit-build-core — CMake extension build configuration
# ---------------------------------------------------------------------------
# scikit-build-core calls CMake directly; all metadata lives here in
# pyproject.toml.  setup.py is kept only as the two-line legacy shim.
#
# Build variants:
#   pip install -e .                          # CPU (default)
#   CMAKE_ARGS="-DUSE_CUDA=ON" pip install .  # CUDA
#   BARTORCH_SKIP_EXT=1 pip install .         # pure-Python / subprocess only
[tool.scikit-build]
cmake.source-dir = "bartorch/csrc"
cmake.build-type = "Release"
# Wheel build: only include the bartorch Python package + the compiled extension.
wheel.packages = ["bartorch"]
# Install the compiled extension into the bartorch package directory inside the wheel.
wheel.install-dir = "bartorch"

[tool.scikit-build.cmake.define]
# Forward BARTORCH_SKIP_EXT env var to CMake so CMakeLists.txt can skip the
# extension build when only the pure-Python fallback is needed.
BARTORCH_SKIP_EXT = {env = "BARTORCH_SKIP_EXT", default = "OFF"}
# Forward USE_CUDA so `CMAKE_ARGS="-DUSE_CUDA=ON"` still works, but the
# cmake.define table also accepts the env var directly.
USE_CUDA = {env = "BARTORCH_USE_CUDA", default = "OFF"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bartorch*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
# Auto-generated file: BART uses single-letter flags (E741) and long dispatch
# lines (E501) that are inherent to wrapping the BART CLI API.
"bartorch/tools/_generated.py" = ["E501", "E741"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
