[build-system]
requires = [
    "scikit-build-core>=0.9",
    "torch",        # provides libtorch + cmake config at build time
    # MKL wheels are only available for x86-64 Linux and Windows.
    # On macOS (no ARM64 MKL on PyPI) the build falls back to
    # OpenBLAS + real FFTW3 — install via: brew install fftw openblas
    "mkl; sys_platform != 'darwin'",          # MKL runtime (libmkl_rt)
    "mkl-include; sys_platform != 'darwin'",  # MKL headers (mkl_cblas.h, fftw/fftw3.h)
]
build-backend = "scikit_build_core.build"

[project]
name = "bartorch"
version = "0.1.0.dev0"
description = "PyTorch-native interface to the Berkeley Advanced Reconstruction Toolbox (BART)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
    # MKL runtime is the BLAS/FFT backend on Linux and Windows.
    # On macOS the build uses OpenBLAS + FFTW3 (no MKL runtime needed at runtime).
    "mkl; sys_platform != 'darwin'",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "nbstripout",
    "codespell",
]
deepinv = [
    "deepinv>=0.2",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme",
    "nbsphinx",
    "sphinx-copybutton",
    "nbconvert",
    "ipykernel",
    "matplotlib",
    "nbstripout",
]

# ---------------------------------------------------------------------------
# scikit-build-core — CMake extension build configuration
# ---------------------------------------------------------------------------
# scikit-build-core calls CMake directly; all metadata lives here in
# pyproject.toml.  setup.py is kept only as the two-line legacy shim.
#
# Build variants:
#   pip install -e .                          # CPU (default)
#   CMAKE_ARGS="-DUSE_CUDA=ON" pip install .  # CUDA
[tool.scikit-build]
cmake.source-dir = "src/bartorch/csrc"
cmake.build-type = "Release"
# Wheel build: the package lives under src/ (modern src layout).
# scikit-build-core strips the "src/" prefix when installing into the wheel.
wheel.packages = ["src/bartorch"]
# Install the compiled extension into the bartorch package directory inside the wheel.
wheel.install-dir = "bartorch"

[tool.scikit-build.cmake.define]
# Forward USE_CUDA so `CMAKE_ARGS="-DUSE_CUDA=ON"` still works, but the
# cmake.define table also accepts the env var directly.
USE_CUDA = {env = "BARTORCH_USE_CUDA", default = "OFF"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bartorch*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
# Auto-generated file: BART uses single-letter flags (E741) and long dispatch
# lines (E501) that are inherent to wrapping the BART CLI API.
"src/bartorch/tools/_generated.py" = ["E501", "E741"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
